[package]
name = "xmtv_api"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.22"
chrono = "0.4.38"
rusqlite = "0.32.0"
url = "2.5.2"
reqwest = { version = "0.11", features = ["blocking"] }
rand = "0.8.5"
anyhow = "1.0.86"
serde_json = "1.0.120"
indicatif = "0.17.8"
serde = { version = "1.0.204", features = ["derive"] }